[project]
name = "generic-ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "deepracer-utils>=1.0.11",
    "matplotlib>=3.10.6",
    "mkdocs-material>=9.6.15",
    "pandas>=2.3.3",
]

[project.optional-dependencies]
dev = [
 "mkdocs-material",
]
